--- a/links.html
+++ b/links.html
@@ -11,7 +11,8 @@
     <h1>Links</h1>
     <div class="wrapper">
         <div class="link"><a href="student_pgs/julia.html">Julia</a></div>
-        <div class="link"><a href="student_pgs/julia.html">Link</a></div>
+        <div class="link"><a href="student_pgs/isha.html">Isha</a></div>
+        <!-- <div class="link"><a href="student_pgs/isha.html"><button class="coolBtn">Isha</button></a></div> -->
     </div>
     
 </body>
