Buttons!!! courtesy of isha!!

--- a/links.html
+++ b/links.html
@@ -10,9 +10,10 @@
 <body>
     <h1>Links</h1>
     <div class="wrapper">
-        <div class="link"><a href="student_pgs/julia.html">Julia</a></div>
-        <div class="link"><a href="student_pgs/isha.html">Isha</a></div>
-        <!-- <div class="link"><a href="student_pgs/isha.html"><button class="coolBtn">Isha</button></a></div> -->
+        <div class="link"><a href="student_pgs/julia.html"><button class="coolBtn">Julia</button></a></div>
+        <div class="link"><a href="student_pgs/isha.html"><button class="coolBtn">Isha</button></a></div>
+        <div class="link"><a href=""><button class="coolBtn">NextStu</button></a></div>
+    </div>
     </div>
     
 </body>
