Increased text size

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>Check out his growing set of web-related learning materials on his <a
             href="https://atcs-wang.github.io/learnweb/">Github Pages website</a> to see what he's been up to
         lately!</p>
-    <p><b>Check out some <a
+    <p style="font-size: 20px"><b>Check out some <a
         href="links.html">pages</a> we made for you!</b></p>
 </body>
 
