Added some comments

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <!-- Template adapted from MDN's example at https://mdn.github.io/beginner-html-site-styled/ -->
+<!-- Home page, link to the links page at the bottom -->
+<!-- Page from Mr. Wang's HTML tutorial! -->
 
 <head>
     <meta charset="utf-8">
