--- a/links.html
+++ b/links.html
@@ -12,6 +12,7 @@
     <div class="wrapper">
         <div class="link"><a href="student_pgs/julia.html"><button class="coolBtn">Julia</button></a></div>
         <div class="link"><a href="student_pgs/isha.html"><button class="coolBtn">Isha</button></a></div>
+        <!-- Add your name here when you make your page-->
         <div class="link"><a href=""><button class="coolBtn">NextStu</button></a></div>
     </div>
     </div>
