More comments why do I keep changing them

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <!-- Template adapted from MDN's example at https://mdn.github.io/beginner-html-site-styled/ -->
 <!-- Home page, link to the links page at the bottom -->
+<!-- Page altered by Julia! -->
 <!-- Page from Mr. Wang's HTML tutorial! -->
 
 <head>
