--- a/links.html
+++ b/links.html
@@ -1,3 +1,4 @@
+<!-- Links page made by Julia with buttons by Isha! (you should totally look at those) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +13,7 @@
     <div class="wrapper">
         <div class="link"><a href="student_pgs/julia.html"><button class="coolBtn">Julia</button></a></div>
         <div class="link"><a href="student_pgs/isha.html"><button class="coolBtn">Isha</button></a></div>
-        <!-- Add your name here when you make your page-->
+        <!-- Add your name and file path here when you make your page -->
         <div class="link"><a href=""><button class="coolBtn">NextStu</button></a></div>
     </div>
     </div>
