Changed a line on the index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Mr. Wang is super cool!</h1>
     <img src="images/portrait.jpg" alt="A stunning portrait of Mr. Wang." title="Really captures the hair.">
 
-    <p>Mr. Wang is a CS teacher at Bergen County Academies.</p>
+    <p>Mr. Wang taught us a lot as a CS teacher at Bergen County Academies.</p>
 
     <p>We love learning from him in a wide range of CS-related subjects, including</p>
 
