--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
     <ul>
         <!-- changed to list in the tutorial -->
-        <li>Introductory Programming (Python/Java/HTML/CSS/Javascript)</li>
+        <li><strong>Introductory Programming (Python/Java/HTML/CSS/Javascript)</strong></li>
         <li>Systems Programming (6502 Assembly, C)</li>
         <li>Web Development (NodeJS)</li>
         <li>Artificial Intelligence and Machine Learning</li>
+        <li>Super Smash Bros</li>
     </ul>
 
     <p>He believes strongly in active, project-centric learning, and values collaboration, transparency, and taking
