--- a/links.html
+++ b/links.html
@@ -6,15 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/links.css">
-    <title>Links</title>
+    <title>Thank you Mr. Wang!</title>
 </head>
 <body>
-    <h1>Links</h1>
+    <h1>Our Pages</h1>
     <div class="wrapper">
         <div class="link"><a href="student_pgs/julia.html"><button class="coolBtn">Julia</button></a></div>
         <div class="link"><a href="student_pgs/isha.html"><button class="coolBtn">Isha</button></a></div>
-        <!-- Add your name and file path here when you make your page -->
-        <div class="link"><a href=""><button class="coolBtn">NextStu</button></a></div>
+        <div class="link"><a href="student_pgs/vrielle.html"><button class="coolBtn">Vrielle</button></a></div>
+        <div class="link"><a href="student_pgs/ashley.html"><button class="coolBtn">Ashley</button></a></div>
+        <div class="link"><a href="student_pgs/kimby.html"><button class="coolBtn">Kimberley</button></a></div>
+        <div class="link"><a href="student_pgs/jeannelle.html"><button class="coolBtn">Jeannelle</button></a></div>
     </div>
     </div>
     
