--- a/student_pgs/isha.html
+++ b/student_pgs/isha.html
@@ -4,10 +4,23 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style/links.css">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
+        <link rel="stylesheet" href="../style/navbar.css">
         <title>Isha</title>
     </head>
 <body>
+    <header>
+        <div class = "right_align">
+            <a href="../index.html" class="button">Home</a>
+            <a href="isha.html" class="button">Isha</a>
+            <a href="julia.html" class="button">Julia</a>
+            <a href="vrielle.html" class="button">Vrielle</a>
+            <a href="ashley.html" class="button">Ashley</a>
+            <a href="kimby.html" class="button">Kimberley</a>
+            <a href="jeannelle.html" class="button">Jeannelle</a>
+        </div>
+    </header>
     
 </body>
 </html>
