--- a/student_pgs/julia.html
+++ b/student_pgs/julia.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Julia</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
+        <link rel="stylesheet" href="../style/navbar.css">
+        <link rel="stylesheet" href="../style/julia.css">
+
+        <title>Julia's Page!</title>
+    </head>
 <body>
+    <header>
+        <div class = "right_align">
+            <a href="../index.html" class="button">Home</a>
+            <a href="isha.html" class="button">Isha</a>
+            <a href="julia.html" class="button">Julia</a>
+            <a href="vrielle.html" class="button">Vrielle</a>
+            <a href="ashley.html" class="button">Ashley</a>
+            <a href="kimby.html" class="button">Kimberley</a>
+            <a href="jeannelle.html" class="button">Jeannelle</a>
+        </div>
+    </header>
+    <div class="main">
+        <h1>Thank you Mr. Wang!</h1>
+    <img class = "img1" src="../images/portrait.jpg" title="That hair though">
+    <div class="intro">
+        <p class="big">It was definitely intimidating getting fully into computer science 
+            for the first time last year,</p>
+        <p class="big">but thanks to your help I've enjoyed it and made all 
+            of <a href="https://github.com/JulThompson">this</a>!</p>
+    </div>
+
+    <p class="big">It's been a really fun two years having you for Intro to Computer Science, SQL, and a little bit of AP</p>
+    <p>Even when it wasn't so fun (like when I got sick both years right before labs/tests), 
+        you've helped make things easier.</p>
+    <p>I've also learned from you in ways outside of your class, like using your web app tutorials
+        for <a href="'https://github.com/ishaaty/clothingPickerMidyear">midyear</a> this past year!</p>
     
+    <p id="end">I'm sad to see you go and will miss you, but I appreciate you for helping me discover 
+        my passion for CS and always treating us with kindness!</p>
+    <h2>Good luck with whatever you do next!</h2>
+    
+    <p>A little musical sendoff:</p>
+    <audio controls autoplay loop>
+        <source src="../audio/piano.mp3" type="audio/mpeg">
+    </audio>
+    </div>
 </body>
 </html>
