--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         <p>Check out his growing set of web-related learning materials on his <a
                 href="https://atcs-wang.github.io/learnweb/">Github Pages website</a> to see what he's been up to
             lately!</p>
-        <p style="font-size: 20px"><b>Check out some <a
-            href="links.html">pages</a> we made for you!</b></p>
+        <p style="font-size: 20px"><b>Check out some of the pages we made for you!</b></p>
     </div>
 </body>
 
