Julia, Isha, and Kimby pages set

--- a/student_pgs/julia.html
+++ b/student_pgs/julia.html
@@ -39,13 +39,14 @@
 
     <p class="big">It's been a really fun two years having you for Intro to Computer Science, SQL, and a little bit of AP</p>
     <p>Even when it wasn't so fun (like when I got sick both years right before labs/tests), 
-        you've helped make things easier.</p>
+        you've helped make things easier and were so accomodating.</p>
     <p>I've also learned from you in ways outside of your class, like using your web app tutorials
         for <a href="'https://github.com/ishaaty/clothingPickerMidyear">midyear</a> this past year!</p>
-    
+    <p>I cannot express how much it has helped to have a teacher like you as I got accustomed to life at BCA!</p>
     <p id="end">I'm sad to see you go and will miss you, but I appreciate you for helping me discover 
         my passion for CS and always treating us with kindness!</p>
     <h2>Good luck with whatever you do next!</h2>
+    <h2>~Julia <3</h2>
     
     <p>A little musical sendoff:</p>
     <audio controls autoplay loop>
