--- a/student_pgs/isha.html
+++ b/student_pgs/isha.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
         <link rel="stylesheet" href="../style/navbar.css">
+        <link rel="stylesheet" href="../style/img.css">
         <title>Isha</title>
     </head>
 <body>
@@ -21,6 +22,8 @@
             <a href="jeannelle.html" class="button">Jeannelle</a>
         </div>
     </header>
+    <img src="../images/vending.jpg" title="in thought">
+    <img src="../images/ap.jpg" title="Post AP!">
     
 </body>
 </html>
