kimby img fixes

--- a/student_pgs/kimby.html
+++ b/student_pgs/kimby.html
@@ -23,8 +23,8 @@
         </div>
     </header>
     <div class=".img">
-        <img src="../images/floored.jpg" title="absolutely floored">
-        <img src="../images/olympics.jpg" title="CS Olympics!">
+        <img src="../images/floored.JPG" title="absolutely floored">
+        <img src="../images/olympics.JPG" title="CS Olympics!">
     </div>
     
 </body>
